2004-10-19  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elf/exclude.exp: Allow cris-*-elf.

	* ld-elf/exclude1.s: Add ".data". Remove "- include_sym".
	* ld-elf/exclude2.s: Add ".data".

2004-10-19  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-elf/exclude.exp: Don't run for cris-*-elf.

2004-10-16  Daniel Jacobowitz  <dan@debian.org>

	* ld-elf/exclude1.s, ld-elf/exclude2.s, ld-elf/exclude.exp: New.

2004-10-15  Alan Modra  <amodra@bigpond.net.au>

	* ld-crx/reloc-num8.d: Adjust for changed orphan placement.
	* ld-crx/reloc-num16.d: Likewise.
	* ld-crx/reloc-num32.d: Likewise.
	* ld-scripts/provide-2.t: Start .data at 0x2000.
	* ld-scripts/provide-2.d: Adjust.

2004-10-14  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-scripts/sort.exp: Run for ELF targets only.

2004-10-14  Alan Modra  <amodra@bigpond.net.au>

	* ld-scripts/overlay-size.d: Update for changed orphan section
	placement.
	* ld-mmix/bpo-18.d: Likewise.

2004-10-07  Bob Wilson  <bob.wilson@acm.org>

	* ld-xtensa/lcall1.s: Use .literal directive.
	* ld-xtensa/lcall2.s: Align function entry.
	* ld-xtensa/coalesce2.s: Likewise.

2004-10-04  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-scripts/sort.exp: New file for section sorting tests.
	* ld-scripts/sort_b_a.d: Likewise
	* ld-scripts/sort_b_a.s: Likewise
	* ld-scripts/sort_b_a.t: Likewise
	* ld-scripts/sort_b_a_a-1.d: Likewise
	* ld-scripts/sort_b_a_a-2.d: Likewise
	* ld-scripts/sort_b_a_a-3.d: Likewise
	* ld-scripts/sort_b_a_a.t: Likewise
	* ld-scripts/sort_b_a_n-1.d: Likewise
	* ld-scripts/sort_b_a_n-2.d: Likewise
	* ld-scripts/sort_b_a_n-3.d: Likewise
	* ld-scripts/sort_b_a_n.t: Likewise
	* ld-scripts/sort_b_n.d: Likewise
	* ld-scripts/sort_b_n.s: Likewise
	* ld-scripts/sort_b_n.t: Likewise
	* ld-scripts/sort_b_n_a-1.d: Likewise
	* ld-scripts/sort_b_n_a-2.d: Likewise
	* ld-scripts/sort_b_n_a-3.d: Likewise
	* ld-scripts/sort_b_n_a.t: Likewise
	* ld-scripts/sort_b_n_n-1.d: Likewise
	* ld-scripts/sort_b_n_n-2.d: Likewise
	* ld-scripts/sort_b_n_n-3.d: Likewise